k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-index
  namespace: tools
  labels:
    app: service-index
spec:
  type: ClusterIP
  selector:
    app: service-index
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
